[metadata]
name = invtorch
version = attr: invtorch.__version__
author = Modar M. Alfadly
author_email = modar.alfadly@gmail.com
license = Apache-2.0
description = InvTorch: Memory-Efficient Invertible Functions
keywords = deep learning, pytorch, ai
url = http://github.com/xmodar/invtorch
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Natural Language :: English
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
packages = invtorch
python_requires = >=3.6
install_requires = torch >=1.10.0
